--- a/style.css
+++ b/style.css
@@ -294,6 +294,7 @@ section hr{
 			opacity: 1 !important;
 	}
 
+
 input[type=text], select, textarea {
   width: 100%; 
   padding: 12px;  
@@ -302,9 +303,10 @@ input[type=text], select, textarea {
   box-sizing: border-box; 
   margin-top: 6px; 
   margin-bottom: 16px; 
-  resize: vertical 
+	resize: vertical ;
+}
 
-input[type=submit] {
+input[type=button] {
   background-color: #5a9aa8;
   color: rgb(0, 0, 0);
   padding: 12px 20px;
