--- a/style.css
+++ b/style.css
@@ -313,7 +313,7 @@ input[type=button] {
   border: none;
   border-radius: 4px;
 }
- h3{
+.h3{
 	position: absolute;
 	width: 100%;
 	height: 26px;
@@ -326,7 +326,7 @@ text-shadow:
 		2px 2px 0px #999,
 		3px 3px 0px #FFF;
 }
-section{
+.section{
 	padding-top: 10%;
 	z-index: 0;
 }
